<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera_menu_text" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/painting_list_menu_text" />
        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/ic_view_module"
            android:title="@string/painting_grid_menu_text" />
    </group>

    <item android:title="@string/communication_menu_header">
        <menu>
            <item
                android:id="@+id/nav_web"
                android:icon="@drawable/ic_public"
                android:title="@string/class_website_menu_text" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/tell_your_friends_menu_text" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_email_menu_text" />
        </menu>
    </item>

</menu>
