<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.audreytroutt.androidbeginners.firstapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cell_bg"
        android:contentDescription="@string/background_image_description"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="14pt"
        android:text="@string/main_screen_welcome_message_if_no_image" />

    <FrameLayout
        android:id="@+id/picture_frame"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp">

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/main_screen_camera_image_description"
            android:scaleType="fitCenter" />

    </FrameLayout>

    <ImageView
        android:id="@+id/initial_arrow_image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/main_screen_arrow_image_description"
        android:src="@drawable/arrow"/>

    <TextView
        android:id="@+id/initial_instructions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/initial_arrow_image"
        android:layout_centerInParent="true"
        android:text="@string/main_screen_instructions"
        android:fontFamily="casual"
        android:textSize="22sp"
        android:textAlignment="center"/>

</RelativeLayout>
